--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,29 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <title>Hoang Anh Tuan</title>
+    <meta name="author" content="Hoang Anh Tuan" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to my personal portfolio website!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="React, JavaScript, NodeJS, Anh Tuan, Hoang Anh Tuan, Developer, Frontend Developer, Web Developer, Backend Developer"
+    />
+    <meta name="image" content="%PUBLIC_URL%/preview.jpg" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta property="og:url" content="https://tuanha.dev/" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" />
+    <meta property="og:title" content="Hoang Anh Tuan" />
+    <meta
+      property="og:description"
+      content="Welcome to my personal portfolio website!"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
